arreglo de archivo pasos.md y detalles fino sobre estructura, se agrego la seguridad de logeo a la raiz de la aplicacion

--- a/activeweb-abm/src/main/webapp/WEB-INF/web.xml
+++ b/activeweb-abm/src/main/webapp/WEB-INF/web.xml
@@ -45,8 +45,30 @@
     
     <!--ACA ABAJO VAN A IR LAS SEGURIDADES A CIERTOS CONTROLADORES-->
     
+    <!--Restriccion total a la aplicacion, debe logearse-->
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>WebContraint</web-resource-name>
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        
+        <auth-constraint>
+            <role-name>ver</role-name>
+        </auth-constraint>
+    </security-constraint>
     
     <!--
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>LirosContraint</web-resource-name>
+            <url-pattern>/libros/*</url-pattern>
+        </web-resource-collection>
+        
+        <auth-constraint>
+            <role-name>ver</role-name>
+        </auth-constraint>
+    </security-constraint>
+    
         HACIA QUE RECURSO LOGIN VAMOS A REDIGIR
     -->
     <login-config>
